--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "node-sass": "^7.0.3",
+    "npm": "^9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
